--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,5 +1,39 @@
-version: '3.3'
+version: '3.8'
+
+volumes:
+  db_data:
+  static_value:
+  media_value:
+
 services:
+  db:
+    image: postgres:15-alpine
+    volumes:
+      - db_data:/var/lib/postgresql/data/
+    env_file:
+      - ./.env
+
+  web:
+    image: katrinsa/foodgram:v1.30.04.23
+    restart: always
+    volumes:
+      - static_value:/app/static/
+      - media_value:/app/media/
+    depends_on:
+      - db
+    env_file:
+      - ./.env
+
+  nginx:
+    image: nginx:1.21.3-alpine
+    ports:
+      - 80:80
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
+    depends_on:
+      - web
 
   frontend:
     build:
