--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,13 @@
 asgiref==3.6.0
 Django==4.2
 djangorestframework==3.14.0
-gunicorn==20.0.4
+djangorestframework-simplejwt==5.2.2
+django_filter==23.2
+djoser==2.2.0
+gunicorn==20.1.0
+Pillow==9.5.0
 psycopg2-binary==2.9.6
 python-dotenv==1.0.0
-PyJWT==2.1.0
+pyjwt==2.6.0
 pytz==2023.3
 sqlparse==0.4.4
