--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,20 +1,16 @@
 version: '3.8'
-
-volumes:
-  db_data:
-  static_value:
-  media_value:
-
 services:
+
   db:
-    image: postgres:15-alpine
+    image: postgres:13.0-alpine
+    restart: always
     volumes:
-      - db_data:/var/lib/postgresql/data/
+      - postgres_data:/var/lib/postgresql/data/
     env_file:
       - ./.env
 
   web:
-    image: katrinsa/foodgram:v1.30.04.23
+    image: katrinsa/foodgram:v2.09.05.23
     restart: always
     volumes:
       - static_value:/app/static/
@@ -24,23 +20,15 @@ services:
     env_file:
       - ./.env
 
-  nginx:
-    image: nginx:1.21.3-alpine
-    ports:
-      - 80:80
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - static_value:/var/html/static/
-      - media_value:/var/html/media/
-    depends_on:
-      - web
-
   frontend:
     build:
       context: ../frontend
       dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
+    depends_on:
+      - web
+
   nginx:
     image: nginx:1.19.3
     ports:
@@ -49,3 +37,13 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
+    depends_on:
+      - web
+      - frontend
+    
+volumes:
+  static_value:
+  media_value:
+  postgres_data:
