--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,9 +1,29 @@
 server {
     listen 80;
+    server_tokens off;
+    location /media/ {
+        autoindex on;
+        root /var/html;
+    }
+
+    location /static/admin/ {
+        autoindex on;
+        root /var/html;
+    }
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+    location /api/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
+        proxy_pass http://web:8000;
+    }
+
+    location /admin/ {
+        proxy_pass http://web:8000/admin/;
+    } 
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
@@ -16,6 +36,5 @@ server {
       error_page   500 502 503 504  /50x.html;
       location = /50x.html {
         root   /var/html/frontend/;
-      }
-
+      }   
 }
