--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,38 @@
-asgiref==3.6.0
-Django==4.2
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.2.2
-django_filter==23.2
-djoser==2.2.0
-gunicorn==20.1.0
-Pillow==9.5.0
+black==22.10.00
+Django==3.2.16
+pytest==6.2.4
+pytest-pythonpath==0.7.3
+pytest-django==4.4.0
+djangorestframework==3.12.4
+djangorestframework-simplejwt==4.7.2
+django-filter==22.1
+djoser==2.1.0
+flake8==5.0.4
+flake8-absolute-import==1.0.0.1
+flake8-broken-line==0.5.0
+flake8-bugbear==22.9.11
+flake8-builtins
+flake8-cognitive-complexity==0.1.0
+flake8-commas==2.1.0
+flake8-comprehensions==3.10.0
+flake8-eradicate==1.3.0
+flake8-fixme==1.1.1
+flake8-multiline-containers==0.0.19
+flake8-mutable==1.2.0
+flake8-pep3101==1.3.0
+flake8-pie==0.16.0
+flake8-plugin-utils==1.3.2
+flake8-print==5.0.0
+flake8-printf-formatting==1.1.2
+flake8-quotes==3.3.1
+flake8-simplify==0.19.3
+flake8-todo==0.7
+flake8-use-fstring==1.4
+flake8-variables-names==0.0.5
+gunicorn==20.0.4
+isort==5.10.1
+Pillow==9.3.0
 psycopg2-binary==2.9.6
-python-dotenv==1.0.0
-pyjwt==2.6.0
-pytz==2023.3
-sqlparse==0.4.4
+PyJWT==2.1.0
+python-dotenv==0.21.0
+requests==2.26.0
