--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
     server_tokens off;
+    
     location /media/ {
         autoindex on;
         root /var/html;
@@ -10,6 +11,11 @@ server {
         autoindex on;
         root /var/html;
     }
+
+    location /static/rest_framework/ {
+        root /var/html/;
+    }
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
@@ -24,6 +30,7 @@ server {
     location /admin/ {
         proxy_pass http://web:8000/admin/;
     } 
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
