--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -31,6 +31,7 @@ flake8-use-fstring==1.4
 flake8-variables-names==0.0.5
 gunicorn==20.0.4
 isort==5.10.1
+logging==0.4.9.6
 Pillow==9.3.0
 psycopg2-binary==2.9.6
 PyJWT==2.1.0
