--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,8 @@ exclude =
     venv/,
     env/
 per-file-ignores =
-    */settings.py: E501
+    */settings.py: E501,
+    */serializers.py: A003
 max-complexity = 10
 src_paths = backend
 
