Add setup.cfg, correct according to flake8

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,16 @@
 [flake8]
 ignore =
     W503
+    A002
+    A003 
+    VNE003
 exclude =
     tests/,
     */migrations/,
     venv/,
     env/
 per-file-ignores =
-    */settings.py: E501,
-    */serializers.py: A003
+    */settings.py: E501
 max-complexity = 10
 src_paths = backend
 
