--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,6 +1,11 @@
 version: '3.8'
-services:
 
+volumes:
+  static_value:
+  media_value:
+  postgres_data:
+
+services:
   db:
     image: postgres:13.0-alpine
     restart: always
@@ -21,9 +26,7 @@ services:
       - ./.env
 
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: katrinsa/foodgram-frontend:latest
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
@@ -34,7 +37,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
       - static_value:/var/html/static/
@@ -42,8 +45,3 @@ services:
     depends_on:
       - web
       - frontend
-    
-volumes:
-  static_value:
-  media_value:
-  postgres_data:
