--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,11 @@
 FROM python:3.7-slim
+
 WORKDIR /code
+
 COPY requirements.txt .
-RUN pip3 install -r requirements.txt --no-cache-dir
+
+RUN pip3 install -r requirements.txt
+
 COPY . .
-CMD ["gunicorn", "foodgram.wsgi:application", "--bind", "0:8000" ]
+
+CMD ["gunicorn", "backend.wsgi:application", "--bind", "0:8000" ]
