--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,7 +11,7 @@ flake8==5.0.4
 flake8-absolute-import==1.0.0.1
 flake8-broken-line==0.5.0
 flake8-bugbear==22.9.11
-flake8-builtins
+flake8-builtins==2.0.1
 flake8-cognitive-complexity==0.1.0
 flake8-commas==2.1.0
 flake8-comprehensions==3.10.0
@@ -37,3 +37,4 @@ psycopg2-binary==2.9.6
 PyJWT==2.1.0
 python-dotenv==0.21.0
 requests==2.26.0
+
