--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.7-slim
 WORKDIR /app
 COPY requirements.txt .
+RUN apt-get update && apt-get install -y libpq-dev build-essential
 RUN pip3 install -r ./requirements.txt --no-cache-dir
 COPY . .
 CMD ["gunicorn", "foodgram.wsgi:application", "--bind", "0:8000" ]
