--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,6 @@ FROM python:3.7-slim
 WORKDIR /app
 COPY requirements.txt .
 RUN apt-get update && apt-get install -y libpq-dev build-essential
-RUN pip3 install -r ./requirements.txt --no-cache-dir
+RUN pip install --upgrade pip && pip install -r requirements.txt
 COPY . .
 CMD ["gunicorn", "foodgram.wsgi:application", "--bind", "0:8000" ]
