--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -31,6 +31,11 @@ flake8-use-fstring==1.4
 flake8-variables-names==0.0.5
 gunicorn==20.0.4
 isort==5.10.1
-psycopg2-binary==2.8.6
+Pillow==9.3.0
+psycopg2-binary==2.9.6
+PyJWT==2.1.0
 python-dotenv==0.21.0
+requests==2.26.0
+
+ 
 
