--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,5 @@
 FROM python:3.7-slim
 WORKDIR /app
 COPY requirements.txt .
-RUN apt-get update && apt-get install -y libpq-dev build-essential
-RUN pip install --upgrade pip && pip install -r requirements.txt
-COPY . .
+RUN pip install -r requirements.txt
 CMD ["gunicorn", "foodgram.wsgi:application", "--bind", "0:8000" ]
