Add domen to settings, nginx

--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_tokens off;
-    server_name 51.250.72.161;
+    server_name 51.250.72.161 foodka.servepics.com;
 
     location /media/ {
         autoindex on;
